API First Development with Maven Spring Boot Pagination and OpenAPI 3.0
